# ShipPlacementGenerator

./: README.md  task2.cpp
LinuxDockerJenkins/: CMakeLists.txt  Dockerfile  UnitTests.cpp  docker-compose.yml  task2.cpp  task2.h
lab_1/UnitTests/: UnitTests.cpp
lab_1/task2/: task2.cpp
